--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>Zazor</title>
@@ -57,17 +57,19 @@
 		</div>
 
 		<!--SEARCH-->
-		<div class="search">
+		<section class="search">
 			<div class="search-car"></div>
 			<div class="search-tires"></div>
 			<div class="search-wheels"></div>
 			<div class="clear"></div>
-		</div>
+		</section>
 
 		<!--MIDDLE-->
 		<div class="middle">
-			<div class="left-side">
+
+			<aside class="left-side">
 				<p class="side-menu-title"> <img src="img/c-1.png" alt="каталог">КАТАЛОГ ПРОДУКЦИИ:</p>
+
 				<div class="side-menu-block-left-one">
 					<p class="side-block-title"><img src="img/c-2.png" alt="ШИНЫ">
 						ШИНЫ</p>
@@ -78,6 +80,7 @@
 							<li class="side-menu-item"><a href="#">Наименование 4</a></li>
 						</ul>
 					</div>
+
 					<div class="side-menu-block-left-two">
 						<p class="side-block-title"><img src="img/c-2.png" alt="ДИСКИ">
 							ДИСКИ</p>
@@ -88,6 +91,7 @@
 								<li class="side-menu-item"><a href="#">Наименование 4</a></li>
 							</ul>
 						</div>
+
 						<div class="side-menu-block-left-three">
 							<p class="side-block-title"><img src="img/c-2.png" alt="БОЛТЫ">
 								БОЛТЫ</p>
@@ -97,123 +101,140 @@
 									<li class="side-menu-item"><a href="#">Наименование 3</a></li>
 									<li class="side-menu-item"><a href="#">Наименование 4</a></li>
 								</ul>
-							</div>
-						</div>
+							</div>							
+						</aside>
+
 						<div class="center-content">
 							<ul class="product-items-list">
 
 								<li class="product-items-item"><a href="#">
-									<span class="products-items-title">Goodyear</span>
-									<span class="products-items-subtitle">Ultra Grip Extreme</span>
-									<span class="products-items-image"><img src="img/goodyear.png" alt="Goodyear"></span>
-									<span class="products-items-price">90.00 грн.</span>
+									<figure>
+										<span class="products-items-title-goodyear">Goodyear</span>
+										<span class="products-items-subtitle-goodyear">Ultra Grip Extreme</span>
+										<span class="products-items-image"><img src="img/goodyear.png" alt="Goodyear"></span>
+										<figcaption class="products-items-price-goodyear">90.00 грн.</figcaption>
+									</figure>
 								</a>
 							</li>
 							<li class="product-items-item"><a href="#">
-								<span class="products-items-title">Nokian</span>
-								<span class="products-items-subtitle">Hakkapeliita R</span>
-								<span class="products-items-image"><img src="img/nokian.png" alt="Nokian"></span>
-								<span class="products-items-price">115.00 грн</span>
+								<figure>
+									<span class="products-items-title-nokian">Nokian</span>
+									<span class="products-items-subtitle-nokian">Hakkapeliita R</span>
+									<span class="products-items-image-nokian"><img src="img/nokian.png" alt="Nokian"></span>
+									<figcaption class="products-items-price-nokian">115.00 грн.</figcaption>
+								</figure>
 							</a>
 						</li>
 						<li class="product-items-item"><a href="#">
-							<span class="products-items-title">Hankook</span>
-							<span class="products-items-subtitle">K 708 155/65 R14</span>
-							<span class="products-items-image"><img src="img/hankook.png" alt="Hankook"></span>
-							<span class="products-items-price">393.00 грн.</span>
+							<figure>
+								<span class="products-items-title-hankook">Hankook</span>
+								<span class="products-items-subtitle-hankook">K 708 155/65 R14</span>
+								<span class="products-items-image-hankook"><img src="img/hankook.png" alt="Hankook"></span>
+								<figcaption class="products-items-price-hankook">393.00 грн.</figcaption>
+							</figure>
 						</a>
 					</li>
 
 					<li class="product-items-item"><a href="#">
-						<span class="products-items-title">Goodyear</span>
-						<span class="products-items-subtitle">Ultra Grip Extreme</span>
-						<span class="products-items-image"><img src="img/goodyear.png" alt="Goodyear"></span>
-						<span class="products-items-price">90.00 грн.</span>
+						<figure>
+							<span class="products-items-title-goodyear">Goodyear</span>
+							<span class="products-items-subtitle-goodyear">Ultra Grip Extreme</span>
+							<span class="products-items-image"><img src="img/goodyear.png" alt="Goodyear"></span>
+							<figcaption class="products-items-price-goodyear">90.00 грн.</figcaption>
+						</figure>
 					</a>
 				</li>
 				<li class="product-items-item"><a href="#">
-					<span class="products-items-title">Nokian</span>
-					<span class="products-items-subtitle">Hakkapeliita R</span>
-					<span class="products-items-image"><img src="img/nokian.png" alt="Nokian"></span>
-					<span class="products-items-price">115.00 грн</span>
+					<figure>
+						<span class="products-items-title-nokian">Nokian</span>
+						<span class="products-items-subtitle-nokian">Hakkapeliita R</span>
+						<span class="products-items-image-nokian"><img src="img/nokian.png" alt="Nokian"></span>
+						<figcaption class="products-items-price-nokian">115.00 грн.</figcaption>
+					</figure>
 				</a>
 			</li>
 			<li class="product-items-item"><a href="#">
-				<span class="products-items-title">Hankook</span>
-				<span class="products-items-subtitle">K 708 155/65 R14</span>
-				<span class="products-items-image"><img src="img/hankook.png" alt="Hankook"></span>
-				<span class="products-items-price">393.00 грн.</span>
+				<figure>
+					<span class="products-items-title-hankook">Hankook</span>
+					<span class="products-items-subtitle-hankook">K 708 155/65 R14</span>
+					<span class="products-items-image-hankook"><img src="img/hankook.png" alt="Hankook"></span>
+					<figcaption class="products-items-price-hankook">393.00 грн.</figcaption>
+				</figure>
 			</a>
 		</li>
 
 		<li class="product-items-item"><a href="#">
-			<span class="products-items-title">Goodyear</span>
-			<span class="products-items-subtitle">Ultra Grip Extreme</span>
-			<span class="products-items-image"><img src="img/goodyear.png" alt="Goodyear"></span>
-			<span class="products-items-price">90.00 грн.</span>
+			<figure>
+				<span class="products-items-title-goodyear2">Goodyear</span>
+				<span class="products-items-subtitle-goodyear2">Ultra Grip Extreme</span>
+				<span class="products-items-image"><img src="img/goodyear.png" alt="Goodyear"></span>
+				<figcaption class="products-items-price-goodyear2">90.00 грн.</figcaption>
+			</figure>
 		</a>
 	</li>
 	<li class="product-items-item"><a href="#">
-		<span class="products-items-title">Nokian</span>
-		<span class="products-items-subtitle">Hakkapeliita R</span>
-		<span class="products-items-image"><img src="img/nokian.png" alt="Nokian"></span>
-		<span class="products-items-price">115.00 грн</span>
+		<figure>
+			<span class="products-items-title-nokian">Nokian</span>
+			<span class="products-items-subtitle-nokian">Hakkapeliita R</span>
+			<span class="products-items-image-nokian"><img src="img/nokian.png" alt="Nokian"></span>
+			<figcaption class="products-items-price-nokian">115.00 грн.</figcaption>
+		</figure>
 	</a>
 </li>
 <li class="product-items-item"><a href="#">
-	<span class="products-items-title">Hankook</span>
-	<span class="products-items-subtitle">K 708 155/65 R14</span>
-	<span class="products-items-image"><img src="img/hankook.png" alt="Hankook"></span>
-	<span class="products-items-price">393.00 грн.</span>
+	<figure>
+		<span class="products-items-title-hankook">Hankook</span>
+		<span class="products-items-subtitle-hankook">K 708 155/65 R14</span>
+		<span class="products-items-image-hankook"><img src="img/hankook.png" alt="Hankook"></span>
+		<figcaption class="products-items-price-hankook">393.00 грн.</figcaption>
+	</figure>
 </a>
 </li>
 </ul>
 </div>
-<div class="right-side">
+
+<aside class="right-side">
 	<form action="#" method="POST">
 		<p class="side-menu-title-right"><img src="img/c-1.png" alt="БРЕНДЫ">БРЕНДЫ</p>
 		<div class="side-menu-block-right-one">
-			<p class="side-block-title"><img src="img/c-2.png" alt="ШИНЫ">
-				ШИНЫ</p>
-				<p class="checkbox-menu-item"><input type="checkbox" name="tires []">Бренд 1</p>
-				<p class="checkbox-menu-item"><input type="checkbox" name="tires []">Бренд 2</p>
-				<p class="checkbox-menu-item"><input type="checkbox" name="tires []">Бренд 3</p>
-			</div>
-			<div class="side-menu-block-right-two">
-				<p class="side-block-title"><img src="img/c-2.png" alt="ДИСКИ">
-					ДИСКИ</p>
-					<p class="checkbox-menu-item"><input type="checkbox" name="wheels []">Бренд 1</p>
-					<p class="checkbox-menu-item"><input type="checkbox" name="wheels []">Бренд 2</p>
-					<p class="checkbox-menu-item"><input type="checkbox" name="wheels []">Бренд 3</p>
-				</div>
-			</div>
-			<button class="choose" type="submit">ВЫБРАТЬ</button>
-		</form>
-	</div>
-	<div class="cleaner"></div>
-	<div class="tire-companies">
-		<a href="#"><img src="img/client-1.png" alt=""></a>
-		<a href="#"><img src="img/client-2.png" alt=""></a>
-		<a href="#"><img src="img/client-3.png" alt=""></a>
-		<a href="#"><img src="img/client-4.png" alt=""></a>
-		<a href="#"><img src="img/client-5.png" alt=""></a>
-		<a href="#"><img src="img/client-6.png" alt=""></a>
-		<a href="#"><img src="img/client-7.png" alt=""></a>
-		<a href="#"><img src="img/client-8.png" alt=""></a>
-	</div>
+			<p class="side-block-title-tires"><img src="img/c-2.png" alt="ШИНЫ"><span>ШИНЫ</span></p>
+			<p class="checkbox-menu-item-tires"><input type="checkbox" name="tires []">Бренд 1</p>
+			<p class="checkbox-menu-item-tires"><input type="checkbox" name="tires []">Бренд 2</p>
+			<p class="checkbox-menu-item-tires"><input type="checkbox" name="tires []">Бренд 3</p>
+		</div>
+		<div class="side-menu-block-right-two">
+			<p class="side-block-title-discks"><img src="img/c-2.png" alt="ДИСКИ"><span>ДИСКИ</span></p>
+			<p class="checkbox-menu-item-discks"><input type="checkbox" name="wheels []">Бренд 1</p>
+			<p class="checkbox-menu-item-discks"><input type="checkbox" name="wheels []">Бренд 2</p>
+			<p class="checkbox-menu-item-discks"><input type="checkbox" name="wheels []">Бренд 3</p>
+		</div>
+		<button class="choose" type="submit">ВЫБРАТЬ</button>
+	</form>
+</aside>
+
+</div>
+<div class="cleaner"></div>
+<section class="tire-companies">
+	<a class="toyo" href="#"><img src="img/client-1.png" alt=""></a>
+	<a class="bridgestone" href="#"><img src="img/client-2.png" alt=""></a>
+	<a class="continental" href="#"><img src="img/client-3.png" alt=""></a>
+	<a class="cooper" href="#"><img src="img/client-4.png" alt=""></a>
+	<a class="avon" href="#"><img src="img/client-5.png" alt=""></a>
+	<a class="factory" href="#"><img src="img/client-6.png" alt=""></a>
+	<a class="tirelli" href="#"><img src="img/client-7.png" alt=""></a>
+	<a class="dunlop" href="#"><img src="img/client-8.png" alt=""></a>
+</section>
 </div>
 
 <!--FOOTER--> 
 <footer>
-	<ul class="footer-nav clearfix">
-		<li class="footer-nav__item"><a href="">О компании</a></li>
-		<li class="footer-nav__item"><a href="">Доставка</a></li>
-		<li class="footer-nav__item"><a href="">Статьи</a></li>
-		<li class="footer-nav__item"><a href="">Контакты</a></li>
+	<ul class="footer-nav">
+		<li class="footer-nav__item"><a class="item--company" href="#">О компании</a></li>
+		<li class="footer-nav__item"><a class="item--dost" href="#">Доставка</a></li>
+		<li class="footer-nav__item"><a class="item--stat" href="#">Статьи</a></li>
+		<li class="footer-nav__item"><a class="item--contact" href="#">Контакты</a></li>
 	</ul>
 	<p>Создание сайта &copy; Global Vision</p>
 </footer>
-
-</div>
 </body>
 </html>
